[main]: fix-z-indexes

--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -34,6 +34,7 @@
 
     // z - indexes
     --modal-z-index: 1000;
+    --overlay-z-index: 100;
 
     // colors
     --overlay-color: #00000060;
