--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -22,7 +22,6 @@
     position: absolute;
     right: -32px;
     bottom: 32px;
-    z-index: 1;
 }
 
 .items {
